--- a/app/Scenes/SimParts/levelDetailsOverlay.css
+++ b/app/Scenes/SimParts/levelDetailsOverlay.css
@@ -1,6 +1,7 @@
 .level-details-overlay {
-	width: 440px;
-	
+	width: 490px;
+	max-width: 100%;
+	box-sizing: border-box;
 	pointer-events: none;
 }
 
@@ -39,4 +40,10 @@
 	right: 0;
 	bottom: 0;
 	font-size: 24px;
+}
+
+@media (max-width: 400px) {
+	.level-details-overlay .mid-text {
+		font-size: 22px;
+	}
 }
